[IMP] survey: prevent table flicker
Purpose
=======
Prevent table with answers from flickering when
having multiple pages with different items count.

Specifications
==============
Adjust the table height to the question types to
keep the pagination buttons on the same level while
switching pages.
Each table line is expected to be, for the text_box
questions, 3 lines height and for the char_box,
numerical, date and datetime question types
(+ comments), only one line height.
Adding a scrollbar if the table height is greater
than expected.

For the text, char, number, date and datetime
question type (+ comments), set the input line id
cells width to a percentage to avoid horizontal
flicker while changing pages and to reduce first
column width.

Task-2957775

Part-of: odoo/odoo#100168

--- a/addons/survey/static/src/scss/survey_templates_results.scss
+++ b/addons/survey/static/src/scss/survey_templates_results.scss
@@ -94,6 +94,14 @@
         border-color: #DEE2E6;
         font-weight: bold;
     }
+    table {
+        font-size: 1rem;
+        &.o_survey_results_table_indexed {
+            td:first-child {
+                width: 7%;
+            }
+        }
+    }
 }
 
 .o_survey_no_answers::before {
